# dictlog

./: .pre-commit-config.yaml  .secrets.baseline  CLAUDE.md  LICENSE  README.md  README_EN.md  dictlog.py  pyproject.toml  slogging.py  test_dictlog.py  test_slogging.py
.github/workflows/: publish.yml
