[project]
name = "dictlog"
version = "0.1.0"
description = "轻量级结构化日志库，提供彩色终端输出和上下文绑定"
readme = "README.md"
requires-python = ">=3.9"
license = "MIT"
authors = [
    { name = "sully", email = "uiautodev@gmail.com" },
]
keywords = ["logging", "structured-logging", "color", "structlog"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Software Development :: Libraries :: Python Modules",
]
dependencies = [
    "colored>=2.0.0",
]

[project.urls]
Homepage = "https://github.com/uiautodev/dictlog"
Repository = "https://github.com/uiautodev/dictlog"
Issues = "https://github.com/uiautodev/dictlog/issues"

[tool.ruff]
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W", "UP"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[dependency-groups]
dev = [
    "pytest>=7.0",
]
